add prophet experiment

--- a/notebooks/prophet_experiment.ipynb
+++ b/notebooks/prophet_experiment.ipynb
@@ -16,8 +16,28 @@
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
-    "import pandas as pd\n",
+    "import pandas as pd \n",
     "import plotly.graph_objects as go\n",
+    "from prophet import Prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the version of Prophet\n",
+    "import prophet\n",
+    "prophet.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def download_stock_data(ticker_symbol):\n",
     "    \"\"\"\n",
@@ -126,8 +146,9 @@
     "# Transform data into Prophet format\n",
     "prophet_df = transform_stock_data(df, ticker)\n",
     "\n",
+    "# !! No Saturdays and Sundays (day_of_week !=5,6)\n",
     "print(\"\\nTransformed data sample (Prophet format):\")\n",
-    "prophet_df.head()"
+    "prophet_df.tail(10)"
    ]
   },
   {
@@ -153,7 +174,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predict with Prophet"
+    "# Predict with Prophet\n",
+    "* Simple to use, but mostly black box approach\n",
+    "* \"By default, Prophet uses a linear model for its forecast.\"\n",
+    "* [Ivan] Good for long-term trend undestanding, but not for the short-term\n",
+    "* Automatic changepoint detection in Prophet"
    ]
   },
   {
@@ -162,16 +187,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Prophet()\n",
-    "m.fit(prophet_df)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualize the Data"
+    "m = Prophet(seasonality_mode = 'multiplicative')\n",
+    "m.add_country_holidays(country_name='US')\n",
+    "m.add_seasonality(name='monthly', period=30.5, fourier_order=5)\n",
+    "m.fit(prophet_df)"
    ]
   },
   {
@@ -180,44 +199,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create interactive plot\n",
-    "fig = go.Figure()\n",
+    "m.train_holiday_names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make dates for prediction\n",
+    "future = m.make_future_dataframe(periods=365)\n",
+    "future.tail(365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove weekends using pandas datetime weekday\n",
+    "future = future[future['ds'].dt.dayofweek < 5]  # 5 = Saturday, 6 = Sunday\n",
+    "future.tail(365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast = m.predict(future)\n",
+    "forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's omit static graphs\n",
+    "# fig1 = m.plot(forecast)\n",
+    "# fig2 = m.plot_components(forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dynamic graphs \n",
+    "from prophet.plot import plot_plotly, plot_components_plotly\n",
     "\n",
-    "# Plot price\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=prophet_df['ds'],\n",
-    "    y=prophet_df['y'],\n",
-    "    name='Price',\n",
-    "    line=dict(color='blue')\n",
-    "))\n",
-    "\n",
-    "# Add moving averages\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=prophet_df['ds'],\n",
-    "    y=prophet_df['ma20'],\n",
-    "    name='MA20',\n",
-    "    line=dict(color='orange', dash='dash')\n",
-    "))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=prophet_df['ds'],\n",
-    "    y=prophet_df['ma50'],\n",
-    "    name='MA50',\n",
-    "    line=dict(color='red', dash='dash')\n",
-    "))\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title=f'{ticker} Stock Price with Moving Averages',\n",
-    "    yaxis_title='Price',\n",
-    "    template='presentation'\n",
-    ")\n",
-    "fig.show()"
+    "plot_plotly(m, forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_components_plotly(m, forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to identify the changepoints\n",
+    "from prophet.plot import add_changepoints_to_plot\n",
+    "fig = m.plot(forecast)\n",
+    "a = add_changepoints_to_plot(fig.gca(), m, forecast)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python\n",
+    "m = Prophet(changepoint_prior_scale=0.5)\n",
+    "forecast = m.fit(prophet_df).predict(future)\n",
+    "fig = m.plot(forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python\n",
+    "m = Prophet(changepoint_prior_scale=0.001)\n",
+    "forecast = m.fit(prophet_df).predict(future)\n",
+    "fig = m.plot(forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://en.wikipedia.org/wiki/List_of_largest_daily_changes_in_the_S%26P_500_Index\n",
+    "# Python\n",
+    "m = Prophet(changepoints=['2009-01-20','2011-08-08','2018-02-05','2020-03-16','2022-09-13'])\n",
+    "forecast = m.fit(prophet_df).predict(future)\n",
+    "fig = m.plot(forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(Prophet.add_regressor) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(Prophet.fit)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
