--- a/notebooks/manual_start.ipynb
+++ b/notebooks/manual_start.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "Plan\n",
-    "* Download the data and visualise it\n",
-    "* Transform the data\n",
+    "* Download the data and visualize it\n",
+    "* Define new features, transform the data\n",
     "* Split into Train/Validation/Test sets"
    ]
   },
@@ -41998,7 +41998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55460,6 +55460,7 @@
     }
    ],
    "source": [
+    "# Code Rolling Deviation\n",
     "# Calculate rolling standard deviation\n",
     "rolling_std = df['Close'].rolling(window=20).std()\n",
     "\n",
